--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <h1>MARCIO LUCAS</h1>
         <h3>PROGRAMAÇÃO WEB 2024.2</h3>
 
-        <a href="01">Atividade 01 - Página Dashboard </a> <br>
-        <a href="02">Atividade 02 - Aguardando...</a>  <br>
-        <a href="03">Atividade 03 - Aguardando...</a> <br>
+        <a href="01" target="_blank">Atividade 01 - Página Dashboard </a> <br>
+        <a href="02" target="_blank">Atividade 02 - Aguardando...</a>  <br>
+        <a href="03" target="_blank">Atividade 03 - Aguardando...</a> <br>
     </div>
 
 </body>
