--- a/01/index.html
+++ b/01/index.html
@@ -207,7 +207,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card card-custom">
                         <div class="card-header card-header-custom">
-                            <h5>New Orders</h5>
+                            <h5>Nova Ordem</h5>
                         </div>
                         <div class="card-body card-body-custom">
                             <h3>150</h3>
