--- a/01/index.html
+++ b/01/index.html
@@ -174,7 +174,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card card-custom">
                         <div class="card-header card-header-custom">
-                            <h5>Bounce Rate</h5>
+                            <h5>Taxa de rejeição</h5>
                         </div>
                         <div class="card-body card-body-custom">
                             <h3>53%</h3>
@@ -217,7 +217,7 @@
       
     
 
-            </div>
+            </div>https://github.com/marc827luva/marc20lucas17/blob/main/01/index.html
 
 			
             <!-- Additional content like charts, tables, etc. can be added here -->
