--- a/01/index.html
+++ b/01/index.html
@@ -164,7 +164,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card card-custom">
                         <div class="card-header card-header-custom">
-                            <h5>New Orders</h5>
+                            <h5>Nova Ordem</h5>
                         </div>
                         <div class="card-body card-body-custom">
                             <h3>150</h3>
@@ -184,7 +184,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card card-custom">
                         <div class="card-header card-header-custom">
-                            <h5>User Registrations</h5>
+                            <h5>Registros de usuários</h5>
                         </div>
                         <div class="card-body card-body-custom">
                             <h3>44</h3>
@@ -194,7 +194,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card card-custom">
                         <div class="card-header card-header-custom">
-                            <h5>Unique Visitors</h5>
+                            <h5>Visitantes Únicos</h5>
                         </div>
                         <div class="card-body card-body-custom">
                             <h3>65</h3>
