--- a/01/index.html
+++ b/01/index.html
@@ -141,7 +141,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <button class="btn btn-primary" id="toggle-sidebar"><i class="fas fa-bars"></i></button>
-                <a class="navbar-brand ms-3" href="#">Dashboard</a>
+                <a class="navbar-brand ms-3" href="#">Painel</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
