--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h3>PROGRAMAÇÃO WEB 2024.2</h3>
 
         <a href="01" target="_blank">Atividade 01 - Página Dashboard </a> <br>
-        <a href="02" target="_blank">Atividade 02 - Aguardando...</a>  <br>
+        <a href="02" target="_blank">Atividade 02 - Transition_Animation </a>  <br>
         <a href="03" target="_blank">Atividade 03 - Aguardando...</a> <br>
     </div>
 
