--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <a href="01" target="_blank">Atividade 01 - Página Dashboard </a> <br>
         <a href="02" target="_blank">Atividade 02 - Transition Animation </a>  <br>
-        <a href="03" target="_blank">Atividade 03 - Aguardando...</a> <br>
+        <a href="03" target="_blank">Atividade 03 - Design Responsivo Bootstrap</a> <br>
     </div>
 
 </body>
