--- a/06/imdex.html
+++ b/06/imdex.html
@@ -3,16 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        function escreveDiv(texto){
-            document.getElementById("minhaDiv").innerHTML = texto;
+    <title>Exercícios Javascript 01</title>
+
+    <script type="text/javaScript">
+
+        function olá(arg){
+            alert(arg);
         }
-    </style>
+        function aqui(arg) {
+            alert(arg)
+        }
+        function ifpi(arg) {
+            alert(arg)
+        }
+    </script>
 </head>
 <body>
+    <h1>Raiz Quadrada</h1>
+    
+    <div id="marcio7"></div>
+    <button onclick="olá ('A raiz quadrada de 25 é 5')">Raiz de 25</button><br> <br>
+    <button onclick="olá ('A raiz quadrada de 25 é 5')">Raiz de 36</button> <br> <br>
+    <button onclick="olá ('A raiz quadrada de 25 é 5')">Raiz de 49</button> <br>
+
+    <hr>
+
     <h1>Escrevendo na Div</h1>
-    <button onclick="escreveDiv('<h1> Programação Web </h1>')">Escrever</button>
-    <div id="minhaDiv"></div>
+    <div id="marcio1"></div>
+    <button onclick="aqui ('kkkkkkkkkkkkkkkkkk')">Escrever</button>
+
+    <hr>
+    <h1>Escrevendo Texto Dinaâmico</h1>
+    <button onclick="ifpi('é melhor ifpi sul')">Escrever</button>
 </body>
 </html>
