--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <a href="03" target="_blank">Atividade 03 - Design Responsivo Bootstrap</a> <br>
         <a href="04" target="_blank">Atividade 04 - Sistema de Gird</a> <br>
         <a href="05" target="_blank">Atividade 05 - testando o javaScript</a> <br>
+        <a href="06" target="_blank">Atividade 06 - Exercícios Javascript 01</a> <br>
+        <a href="07" target="_blank">Atividade 07 - Desafio Javascript 01</a> <br>
     </div>
 
 </body>
