--- a/06/imdex.html
+++ b/06/imdex.html
@@ -34,6 +34,7 @@
 
     <hr>
     <h1>Escrevendo Texto Dinaâmico</h1>
+    <div id="marcio10"></div>
     <button onclick="ifpi('é melhor ifpi sul')">Escrever</button>
 </body>
 </html>
