--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <h1>MARCIO LUCAS</h1>
         <h3>PROGRAMAÇÃO WEB 2024.2</h3>
 
-        <a href="01" target="_blank">Atividade 01 - Página Dashboard </a> <br>
-        <a href="02" target="_blank">Atividade 02 - Transition Animation </a>  <br>
-        <a href="03" target="_blank">Atividade 03 - Design Responsivo Bootstrap</a> <br>
-        <a href="04" target="_blank">Atividade 04 - Sistema de Gird</a> <br>
-        <a href="05" target="_blank">Atividade 05 - testando o javaScript</a> <br>
-        <a href="06" target="_blank">Atividade 06 - Exercícios Javascript 01</a> <br>
-        <a href="07" target="_blank">Atividade 07 - Desafio Javascript 01</a> <br>
+        <a href="01/index.html" target="_blank">Atividade 01 - Página Dashboard </a> <br>
+        <a href="02/index.html" target="_blank">Atividade 02 - Transition Animation </a>  <br>
+        <a href="03/index.html" target="_blank">Atividade 03 - Design Responsivo Bootstrap</a> <br>
+        <a href="04/index.html" target="_blank">Atividade 04 - Sistema de Gird</a> <br>
+        <a href="05/index.html" target="_blank">Atividade 05 - testando o javaScript</a> <br>
+        <a href="06/index.html" target="_blank">Atividade 06 - Exercícios Javascript 01</a> <br>
+        <a href="07/index.html" target="_blank">Atividade 07 - Desafio Javascript 01</a> <br>
     </div>
 
 </body>
