--- a/07/index.html
+++ b/07/index.html
@@ -22,15 +22,15 @@
     <h1>Raiz Quadrada</h1>
     
     <div id="marcio7"></div>
-    <button onclick="olá ('A raiz quadrada de 25 é 5')">Raiz de 25</button><br> <br>
-    <button onclick="olá ('A raiz quadrada de 36 é 6')">Raiz de 36</button> <br> <br>
-    <button onclick="olá ('A raiz quadrada de 49 é 7')">Raiz de 49</button> <br>
+    <button onclick="olá ('A raiz quadrada de 25 é 5')">raiz de 25</button><br> <br>
+    <button onclick="olá ('A raiz quadrada de 36 é 6')">raiz de 36</button> <br> <br>
+    <button onclick="olá ('A raiz quadrada de 49 é 7')">raiz de 49</button> <br>
 
-    <hr>
+    <hr> 
 
     <h1>Escrevendo na Div</h1>
     <div id="marcio1"></div>
-    <button onclick="aqui ('kkkkkkkkkkkkkkkkkk')">Escrever</button>
+    <button onclick="aqui ('aqui ifpi sul')">Escrever</button>
 
     <hr>
     <h1>Escrevendo Texto Dinaâmico</h1>
