--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <a href="05/index.html" target="_blank">Atividade 05 - testando o javaScript</a> <br>
         <a href="06/index.html" target="_blank">Atividade 06 - Exercícios Javascript 01</a> <br>
         <a href="07/index.html" target="_blank">Atividade 07 - Desafio Javascript 01</a> <br>
+        <a href="08/arraydnv.html" target="_blank">Atividade 08 - Javascript - Arrays</a> <br>
+        <a href="09/popepush.html" target="_blank">Atividade 09 - Metodos push e pop</a>
+        <a href="10/teste01.py"> atividade 10 - python</a>
     </div>
 
 </body>
