--- a/index.html
+++ b/index.html
@@ -68,16 +68,17 @@
         <h1>MARCIO LUCAS</h1>
         <h3>PROGRAMAÇÃO WEB 2024.2</h3>
 
-        <a href="01/index.html" target="_blank">Atividade 01 - Página Dashboard </a> <br>
-        <a href="02/index.html" target="_blank">Atividade 02 - Transition Animation </a>  <br>
-        <a href="03/index.html" target="_blank">Atividade 03 - Design Responsivo Bootstrap</a> <br>
-        <a href="04/index.html" target="_blank">Atividade 04 - Sistema de Gird</a> <br>
-        <a href="05/index.html" target="_blank">Atividade 05 - testando o javaScript</a> <br>
-        <a href="06/index.html" target="_blank">Atividade 06 - Exercícios Javascript 01</a> <br>
-        <a href="07/index.html" target="_blank">Atividade 07 - Desafio Javascript 01</a> <br>
+        <a href="01/admin.html" target="_blank">Atividade 01 - Página Dashboard </a> <br>
+        <a href="02/transition.html" target="_blank">Atividade 02 - Transition Animation </a>  <br>
+        <a href="03/bootstrap.html" target="_blank">Atividade 03 - Design Responsivo Bootstrap</a> <br>
+        <a href="04/grid.html" target="_blank">Atividade 04 - Sistema de Gird</a> <br>
+        <a href="05/java.html" target="_blank">Atividade 05 - testando o javaScript</a> <br>
+        <a href="06/exercícios.html" target="_blank">Atividade 06 - Exercícios Javascript 01</a> <br>
+        <a href="07/o2.html" target="_blank">Atividade 07 - Desafio Javascript 01</a> <br>
         <a href="08/arraydnv.html" target="_blank">Atividade 08 - Javascript - Arrays</a> <br>
         <a href="09/popepush.html" target="_blank">Atividade 09 - Metodos push e pop</a> <br>
         <a href="10/A instalação funcionou com sucesso! Parabéns! - Pessoal — Microsoft_ Edge 14_01_2025 18_10_05.png"> Atividade 10 - Servidor Django</a> <br>
+        <a href="11/atividade11.html" target="_blank"> Atividade 11 - Views e Rotas</a>
     </div>
 
 </body>
