--- a/12/index.html
+++ b/12/index.html
@@ -13,10 +13,7 @@
   <body>
     <div class="container">
 
-    <h1>Index</h1>
-
-
-
+    <h1>index</h1>
     
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
