--- a/12/sobre.html
+++ b/12/sobre.html
@@ -13,10 +13,7 @@
   <body>
     <div class="container">
 
-    <h1>Sistema 1.0 desenvolvido por mim</h1>
-
-
-
+    <h1>Esta é a página de sobre</h1>
     
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
