--- a/12/url.html
+++ b/12/url.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>atividade</title>
+    <title>atividade de url</title>
 </head>
 <body>
-    <h1>
-    <a href="index.html">Home</a>|
-    <a href="sobre.html">Sobre</a>|
-    <a href="contato.html">Contato</a>|
-    <a href="ajudar.html">Ajudar</a>
+    <h1><a href="index.html">Home</a>|
+        <a href="sobre.html">sobre</a>|
+        <a href="contato.html">Contato</a>|
+        <a href="ajudar.html">Ajudar</a>
     </h1>
+
 
 </body>
 </html>
