--- a/11/atividade11.html
+++ b/11/atividade11.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>repositório </title>
+    <title>Document</title>
 </head>
 <body>
     <h1><a href="urls.py">url</a></h1>
